# pil2-proofman

./: .gitignore  .gitmodules  Cargo.toml  README.md  debug.json  kfri  output.txt  run_test.sh
.github/workflows/: ci.yaml
book/: introduction.md  quickstart.md
cli/: Cargo.toml
cli/assets/templates/: Cargo.toml.tt  pil_helpers_pilout.rs.tt  pil_helpers_trace.rs.tt  witness_computation.rs.tt
cli/src/: main.rs
cli/src/commands/: execute.rs  gen_custom_commits_fixed.rs  gen_witness.rs  get_constraints.rs  mod.rs  pil_helpers.rs  prove.rs  prove_snark.rs  setup.rs  soundness.rs  stats.rs  verify_constraints.rs  verify_stark.rs
cli/src/commands/pilout/: pilout_inspect.rs
common/: Cargo.toml  build.rs
common/src/: air_instance.rs  air_instance_ctx.rs  air_instances_repository.rs  buffer_allocator.rs  constraints.rs  custom_commits.rs  debug_mode.rs  distribution_ctx.rs  error_manager.rs  execution_ctx.rs  extended_field.rs  fixed_cols.rs  global_info.rs  lib.rs  lib_pilout.rs  memory_handler.rs  mpi_ctx.rs  packed_info.rs  pil_helpers.rs  proof_ctx.rs  prover.rs  prover_helpers.rs  publics.rs  setup.rs  setup_ctx.rs  soundness.rs  stark_info.rs  std_mode.rs  trace.rs  trace2.rs  utils.rs  verbose_mode.rs
curves/: Cargo.toml
curves/src/: curve.rs  ecgfp5.rs  ecmasfp5.rs  goldilocks_quintic_extension.rs  lib.rs
examples/fibonacci-square/: Cargo.toml  README.md  build.rs
examples/fibonacci-square/pil/: build.pil  fibonaccisq.pil  module.pil
examples/fibonacci-square/src/: debug.json  fibonacci.rs  fibonacci_lib.rs  module.rs  public_inputs.rs
examples/fibonacci-square/src/pil_helpers/: pilout.rs  traces.rs
examples/fibonacci-vadcop/: Cargo.toml  README.md
examples/fibonacci-vadcop/src/: fibonacci.rs  fibonacci_lib.rs  module.rs
examples/test-recursive/: README.md  test.circom  test.verifier.circom
examples/test-recursive-c12/: Cargo.toml  README.md
examples/test-recursive-c12/src/: lib.rs  recursive_c12.rs  recursive_c12_lib.rs
examples/test-recursive-c36/: Cargo.toml  README.md
examples/test-recursive-c36/src/: lib.rs  recursive_c36.rs  recursive_c36_lib.rs
examples/test-recursive-c42/: Cargo.toml  README.md  test.circom  test.verifier.circom
examples/test-recursive-c42/src/: lib.rs  recursive_c42.rs  recursive_c42_lib.rs
examples/test-recursive-final/: Cargo.toml  README.md  test.circom  test.verifier.circom
examples/test-recursive-final/src/: lib.rs  recursive_final.rs  recursive_final_lib.rs
examples/test-recursive/src/: recursive.rs  recursive_lib.rs
fields/: Cargo.toml
fields/src/: extended_field.rs  field.rs  fri.rs  goldilocks.rs  goldilocks_quintic_extension.rs  integers.rs  lib.rs  poseidon2.rs  poseidon2_constants.rs  transcript.rs  utils.rs
goldilocks/: Cargo.toml
goldilocks/src/: goldilocks_cubic_extension.rs  lib.rs
hints/: Cargo.toml
hints/src/: global_hints.rs  hints.rs
macros/: Cargo.toml
macros-test/: Cargo.toml
macros-test/src/: lib.rs  trace2.rs
macros/src/: lib.rs  packed_row.rs  packed_trace.rs  trace.rs  trace2.rs  trace_row.rs  unpacked_row.rs
pil2-components/: .gitignore
pil2-components/lib/std/rs/: Cargo.toml
pil2-components/lib/std/rs/src/: common.rs  debug.rs  debug_fast.rs  debugger.rs  decider.rs  lib.rs  std.rs  std_prod.rs  std_sum.rs  std_virtual_table.rs
pil2-components/lib/std/rs/src/range_check/: mod.rs  range.rs  specified_ranges.rs  std_range_check.rs  u16air.rs  u8air.rs  u8air_extended.rs
pil2-components/test/: COMMANDS.md  README.md  run_all_tests.sh
pil2-components/test/connection/: connection.pil
pil2-components/test/direct_update/: direct_update.pil
pil2-components/test/std/connection/rs/: Cargo.toml  build.rs
pil2-components/test/std/connection/rs/src/: connection1.rs  connection2.rs  connection_lib.rs  connection_new.rs
pil2-components/test/std/connection/rs/src/pil_helpers/: pilout.rs  traces.rs
pil2-components/test/std/permutation/rs/: Cargo.toml  build.rs
pil2-components/test/std/permutation/rs/src/: permutation1_6.rs  permutation1_7.rs  permutation1_8.rs  permutation2.rs  permutation_lib.rs
pil2-components/test/std/permutation/rs/src/pil_helpers/: traces.rs
pil2-stark/: Makefile  Makefile_mac
pilout/: Cargo.toml  build.rs
pilout/src/: pilout_proxy.rs
proofman/: Cargo.toml
proofman/src/: challenge_accumulation.rs  constraints.rs  global_constraints.rs  lib.rs  planner.rs  proof_manager.rs  proofman.rs  recursion.rs  snark_wrapper.rs  trace.rs  trace_pol.rs  utils.rs  verify.rs  verify_constraints.rs  wcmanager.rs  witness_component.rs  witness_executor.rs  witness_library.rs  witness_manager.rs
provers/stark/: Cargo.toml
provers/starks-lib-c/: Cargo.toml  bindings_starks.rs  build.rs  ffi_goldilocks.rs
provers/starks-lib-c/src/: ffi_goldilocks.rs  ffi_starks.rs  lib.rs
setup/: Cargo.toml
setup/src/: add_intermediate_pols.rs  airout.rs  calculate_im_pols.rs  cli.rs  expression_optimizer.rs  f3g.rs  fft.rs  fri_poly.rs  gen_code.rs  gen_constraint_pol.rs  gen_libs_pols.rs  gen_pil1_pols.rs  gen_pil_code.rs  get_pilout_info.rs  grand_product_permutation_utils.rs  grand_product_utils.rs  grand_productp_lookup.rs  helpers.rs  im_pols.rs  lib.rs  main.rs  mapping.rs  pil_info.rs  prepare_pil.rs  setup.rs  setup_ctx.rs  smt_generation_pil2.rs  util.rs  utils.rs  witness_calculator.rs
stark-recurser/: Cargo.toml
stark-recurser/circuits.bn128/: stark_verifier.circom.stpl
stark-recurser/circuits.gl/: stark_verifier.circom.stpl
stark-recurser/src/: compressor_vadcop.rs  lib.rs  main.rs  recursive1_vadcop.rs  transcript.rs
transcript/: Cargo.toml
transcript/src/: ffi_transcript.rs
util/: Cargo.toml
util/src/: cli.rs  lib.rs  timer_macro.rs
verifier/: Cargo.toml
verifier/src/: lib.rs  recursive2_verifier.rs  vadcop_final_verifier.rs  vadcop_final_verifier_snark.rs  verifier.rs  verify.rs
witness/: Cargo.toml
witness-helpers/: Cargo.toml
witness-helpers/src/: lib.rs  witness_component.rs  witness_executor.rs  witness_library.rs
witness/src/: lib.rs  witness_component.rs  witness_library.rs  witness_manager.rs
(+290 files in other folders)
