[workspace]
members = [
    "cli",
    "curves",
    "common",
    "hints",
    "pilout",
    "proofman",
    "macros",
    "provers/starks-lib-c",
    "transcript",
    "witness",
    "util",
    "pil2-components/lib/std/rs",
    # "pil2-components/test/std/direct_update/rs",
    # "pil2-components/test/std/diff_buses/rs",
    # "pil2-components/test/std/range_check/rs",
    # "pil2-components/test/std/lookup/rs",
    # "pil2-components/test/std/connection/rs",
    # "pil2-components/test/std/permutation/rs",
    # "pil2-components/test/simple/rs",
    # whoever re-enables this, it has to work out of
    # the box with `cargo check --workspace` or CI will
    # break and dev experience will be bad since repo
    # won't build with a fresh clone
    "examples/fibonacci-square", "fields",
]

resolver = "2"

[workspace.dependencies]
proofman-macros = { path = "macros", version = "0.7.1" }
proofman = { path = "proofman", version = "0.7.1" }
proofman-common = { path = "common", version = "0.7.1" }
proofman-hints = { path = "hints", version = "0.7.1" }
proofman-util = { path = "util", version = "0.7.1" }
proofman-cli = { path = "cli", version = "0.7.1" }
pil-std-lib = { path = "pil2-components/lib/std/rs", version = "0.7.1" }
witness = { path = "witness", version = "0.7.1" }
pilout = { path = "pilout", version = "0.7.1" }
fields = { path = "fields", version = "0.7.1" }
log = { version = "0.4", default-features = false }
env_logger = "0.11"
bytes = "1.7"
prost = "0.13"
rand = "0.9"
num-bigint = "0.4"
prost-build = "0.13"
num-traits = "0.2"
rayon = "1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_arrays = "0.1"
serde_derive = "1.0.196"
colored = "3"
