[workspace.package]
version = "0.8.0"
edition = "2021"
license = "Apache-2.0 or MIT"
keywords = ["pil2-proofman", "prover", "zero-knowledge"]
repository = "https://github.com/0xPolygonHermez/pil2-proofman"
categories = ["cryptography"]

[workspace]
members = [
    "cli",
    "curves",
    "common",
    "hints",
    "pilout",
    "proofman",
    "macros",
    "provers/starks-lib-c",
    "transcript",
    "witness",
    "util",
    "pil2-components/lib/std/rs",
    # "pil2-components/test/std/direct_update/rs",
    # "pil2-components/test/std/diff_buses/rs",
    # "pil2-components/test/std/range_check/rs",
    # "pil2-components/test/std/lookup/rs",
    # "pil2-components/test/std/connection/rs",
    # "pil2-components/test/std/permutation/rs",
    # "pil2-components/test/simple/rs",
    # whoever re-enables this, it has to work out of
    # the box with `cargo check --workspace` or CI will
    # break and dev experience will be bad since repo
    # won't build with a fresh clone
    "examples/fibonacci-square",
]

resolver = "2"

[workspace.dependencies]
proofman-macros = { path = "macros" }
proofman = { path = "proofman" }
proofman-common = { path = "common" }
proofman-hints = { path = "hints" }
proofman-util = { path = "util" }
proofman-cli = { path = "cli" }
pil-std-lib = { path = "pil2-components/lib/std/rs" }
witness = { path = "witness" }
pilout = { path = "pilout" }
log = { version = "0.4", default-features = false }
env_logger = "0.11"
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git", rev = "f00191a5303f2ff6ec99b9889aa66bee9f1f66ac" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "f00191a5303f2ff6ec99b9889aa66bee9f1f66ac" }
bytes = "1.7"
prost = "0.13"
rand = "0.9"
num-bigint = "0.4"
prost-build = "0.13"
num-traits = "0.2"
rayon = "1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_arrays = "0.2"
serde_derive = "1.0.196"
colored = "3"
tracing = "0.1"
libloading = "0.8.7"
sysinfo = "0.35.1"
blake3 = "1.3.1"
