[package]
name = "proofman-cli"
version = "0.8.0"
authors = ["Polygon Labs"]
edition = "2021"
readme = "README.md"

[dependencies]
pilout = { path = "../pilout" }
proofman-util = { path = "../util" }
proofman = { path = "../proofman" }
proofman-common = { path = "../common" }
witness = { path = "../witness" }
blake3 = "1.3.1"

p3-goldilocks.workspace = true
p3-field.workspace = true
log.workspace = true
env_logger.workspace = true
libloading = "0.8.4"

colored.workspace = true
serde.workspace = true
serde_json.workspace = true

clap = { version = "4.5.13", features = ["derive", "env"] }
tinytemplate = "1.1"
convert_case = "0.6"

[features]
default = []
dev = []