[package]
name = "proofman-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

readme = "README.md"

[dependencies]
pilout = { path = "../pilout" }
proofman-util = { path = "../util" }
proofman = { path = "../proofman" }
proofman-common = { path = "../common" }
witness = { path = "../witness" }
fields = { path = "../fields" }

tracing.workspace = true
libloading.workspace = true
blake3.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
bytemuck.workspace = true

clap = { version = "4.5.38", features = ["derive", "env"] }
tinytemplate = "1.1"
convert_case = "0.8"

[features]
default = []
dev = []