[package]
name = "proofman-common"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

build = "build.rs"

[dependencies]
proofman-starks-lib-c = { path = "../provers/starks-lib-c" }
proofman-util = { path = "../util" }
transcript = { path = "../transcript" }

libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
tracing.workspace = true
p3-field.workspace = true
p3-goldilocks.workspace = true
proofman-macros.workspace = true
rayon.workspace = true
sysinfo.workspace = true

mpi = { version = "0.8.0", optional = true }
tracing-subscriber = { version = "0.3" }

[features]
default = []
no_lib_link = ["proofman-starks-lib-c/no_lib_link"]
disable-distributed = []
distributed = ["dep:mpi"]
diagnostic = ["proofman-macros/diagnostic"]
gpu = ["proofman-starks-lib-c/gpu"]
