[package]
name = "proofman-common"
version = "0.8.1"
edition = "2021"
build = "build.rs"

[dependencies]
libloading = "0.8.4"
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
log.workspace = true
transcript = { path = "../transcript" }
p3-field.workspace = true
p3-goldilocks.workspace = true
proofman-macros.workspace = true
env_logger.workspace = true
proofman-util = { path = "../util" }
proofman-starks-lib-c = { path = "../provers/starks-lib-c" }
rayon.workspace = true

sysinfo = "0.22.5"
core_affinity = "0.8.3"
dashmap = "6.1.0"

# Distributed mode (mpi) is only supported on Linux x86_64
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
mpi = { version = "0.8.0" }

[features]
default = []
no_lib_link = ["proofman-starks-lib-c/no_lib_link"]
disable-distributed = []
diagnostic = ["proofman-macros/diagnostic"]
gpu = ["proofman-starks-lib-c/gpu"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(distributed)'] }
