[package]
name = "proofman-common"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

build = "build.rs"

[dependencies]
proofman-starks-lib-c = { path = "../provers/starks-lib-c" }
proofman-util = { path = "../util" }
transcript = { path = "../transcript" }

libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
p3-field.workspace = true
p3-goldilocks.workspace = true
proofman-macros.workspace = true
rayon.workspace = true
core_affinity = "0.8.3"
sysinfo.workspace = true

mpi = { version = "0.8.0", optional = true }
tracing-subscriber = { version = "0.3" }

# Distributed mode (mpi) is only supported on Linux x86_64
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
mpi = { version = "0.8.0" }

[features]
default = []
no_lib_link = ["proofman-starks-lib-c/no_lib_link"]
disable-distributed = []
diagnostic = ["proofman-macros/diagnostic"]
gpu = ["proofman-starks-lib-c/gpu"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(distributed)'] }
