[package]
name = "curves"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
p3-goldilocks.workspace = true
p3-field.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand.workspace = true