[package]
name = "proofman-hints"
version = "0.7.1"
edition = "2021"

[dependencies]
proofman-starks-lib-c = { path = "../provers/starks-lib-c" }
proofman-common = { path = "../common" }
proofman-util = { path = "../util" }
fields = { path = "../fields" }

log.workspace = true

[features]
default = []
gpu = ["proofman-starks-lib-c/gpu"]