[package]
name = "proofman"
version = "0.4.0"
edition = "2021"

[dependencies]
proofman-common = { path = "../common" }
proofman-macros = { path = "../macros" }
proofman-hints = { path = "../hints" }
proofman-util = { path = "../util" }
proofman-starks-lib-c = { path = "../provers/starks-lib-c" }
curves = { path = "../curves" }
transcript = { path = "../transcript" }
witness = { path = "../witness" }

log.workspace = true
env_logger.workspace = true
p3-goldilocks.workspace = true
p3-field.workspace = true

libloading = "0.8.4"
colored.workspace = true
mpi = { version = "0.8.0", optional = true }
serde_json.workspace = true
rayon = "1.7"
num-bigint = "0.4"
num-traits = "0.2"

[features]
default = []
no_lib_link = ["proofman-common/no_lib_link"]
distributed = ["proofman-common/distributed", "dep:mpi"]
diagnostic = ["proofman-macros/diagnostic"]
