[package]
name = "proofman"
version = "0.7.0"
edition = "2021"

[dependencies]
proofman-common = { path = "../common" }
proofman-macros = { path = "../macros" }
proofman-hints = { path = "../hints" }
proofman-util = { path = "../util" }
proofman-starks-lib-c = { path = "../provers/starks-lib-c" }
curves = { path = "../curves" }
transcript = { path = "../transcript" }
witness = { path = "../witness" }

log.workspace = true
env_logger.workspace = true
p3-goldilocks.workspace = true
p3-field.workspace = true

libloading = "0.8.4"
colored.workspace = true
serde_json.workspace = true
rayon = "1.7"
num-bigint = "0.4"
num-traits = "0.2"
blake3 = "1.3.1"

[features]
default = []
no_lib_link = ["proofman-common/no_lib_link"]
diagnostic = ["proofman-macros/diagnostic"]
gpu = ["proofman-common/gpu", "proofman-starks-lib-c/gpu"]
