[package]
name = "proofman"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
proofman-common = { path = "../common" }
proofman-macros = { path = "../macros" }
proofman-hints = { path = "../hints" }
proofman-util = { path = "../util" }
proofman-starks-lib-c = { path = "../provers/starks-lib-c" }
curves = { path = "../curves" }
transcript = { path = "../transcript" }
witness = { path = "../witness" }
pil-std-lib = { workspace = true }

tracing.workspace = true
fields.workspace = true
libloading.workspace = true
colored.workspace = true
serde_json.workspace = true
rayon.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
blake3.workspace = true
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3"
rand = "0.9"

[features]
default = []
no_lib_link = ["proofman-common/no_lib_link"]
diagnostic = ["proofman-macros/diagnostic"]
gpu = ["proofman-common/gpu", "proofman-starks-lib-c/gpu"]
