[package]
name = "transcript"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
proofman-starks-lib-c = { path = "../provers/starks-lib-c" }

[features]
default = []
no_lib_link = ["proofman-starks-lib-c/no_lib_link"]
gpu = ["proofman-starks-lib-c/gpu"]