[package]
name = "proofman-verifier"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
fields = { workspace = true }

num-bigint = { workspace = true }
rand = { workspace = true }

[features]
default = []
verify = []