[package]
name = "witness"
version = "0.7.1"
edition = "2021"

[dependencies]
proofman-common = { path = "../common" }
proofman-util = { path = "../util" }

log.workspace = true
env_logger.workspace = true
p3-goldilocks.workspace = true
p3-field.workspace = true

colored.workspace = true
serde_json.workspace = true

[features]
default = []
no_lib_link = []
