[package]
name = "witness"
version = "0.8.0"
edition = "2021"

[dependencies]
proofman-common = { path = "../common" }
proofman-util = { path = "../util" }
fields = { path = "../fields" }

log.workspace = true
env_logger.workspace = true

colored.workspace = true
serde_json.workspace = true

[features]
default = []
no_lib_link = []
