[package]
name = "fibonacci-square"
version = "0.7.1"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
proofman-common = { path = "../../common" }
fields = { path = "../../fields" }

proofman-macros.workspace = true
witness.workspace = true
pil-std-lib.workspace = true
env_logger.workspace = true
log.workspace = true
rayon = "1"

serde.workspace = true
serde_json.workspace = true
serde_arrays.workspace = true
num-bigint = "0.4"

[features]
default = []
dev = []
diagnostic = []
gpu = ["proofman-common/gpu"]