[package]
name = "fibonacci-square"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[lib]
crate-type = ["dylib"]

[dependencies]
proofman-common = { path = "../../common" }

proofman-macros.workspace = true
witness.workspace = true
pil-std-lib.workspace = true
tracing.workspace = true
p3-goldilocks.workspace = true
p3-field.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_arrays.workspace = true
rayon.workspace = true
num-bigint.workspace = true

[features]
default = []
diagnostic = []
gpu = ["proofman-common/gpu"]