[package]
name = "proofman-starks-lib-c"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

build = "build.rs"

[dependencies]
tracing.workspace = true
crossbeam-channel = "0.5.15"

[features]
default = []
no_lib_link = []
gpu = []
