[package]
name = "pil-std-lib"
version = "0.8.0"
edition = "2021"

[dependencies]
proofman-common.workspace = true
proofman-hints.workspace = true
proofman-util.workspace = true
log.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rayon.workspace = true
witness.workspace = true
colored.workspace = true

fields = { path = "../../../../fields" }