[package]
name = "permutation"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
proofman.workspace = true
proofman-common.workspace = true
proofman-macros.workspace = true
proofman-cli.workspace = true
witness.workspace = true
pil-std-lib = { path = "../../../../lib/std/rs" }

env_logger.workspace = true
log.workspace = true
rand.workspace = true
num-bigint.workspace = true
p3-goldilocks.workspace = true
p3-field.workspace = true
rayon.workspace = true

[build-dependencies]
proofman-cli.workspace = true

[features]
default = []
no_lib_link = ["proofman-common/no_lib_link"]
diagnostic = ["proofman-macros/diagnostic"]
debug = []